# altmetric-validator-ai

./: .coverage  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  SECURITY.md  SETUP_DEV.md  example_usage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
tests/: __init__.py  test_auditor.py
wunaraha/: __init__.py  auditor.py  models.py
wunaraha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
