[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wunaraha"
version = "0.1.0"
description = "Wunaraha: Framework Audit Halusinasi Metrik Alternatif - AI-powered altmetric validation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wunaraha Contributors", email = "wunaraha@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["altmetrics", "ai", "validation", "research", "hallucination", "audit"]
requires-python = ">=3.8"
dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]
ml = [
    "scikit-learn>=1.2.0",
    "sentence-transformers>=2.2.0",
]
dashboard = [
    "streamlit>=1.20.0",
    "plotly>=5.14.0",
]
api = [
    "tweepy>=4.14.0",
    "Mastodon.py>=1.5.0",
    "python-dotenv>=1.0.0",
]
all = [
    "wunaraha[dev,ml,dashboard,api]",
]

[project.urls]
Homepage = "https://github.com/wunaraha/wunaraha"
Repository = "https://github.com/wunaraha/wunaraha.git"
Documentation = "https://github.com/wunaraha/wunaraha#readme"
Issues = "https://github.com/wunaraha/wunaraha/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["wunaraha*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py10', 'py11', 'py12']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=wunaraha --cov-report=term-missing"
